--- a/stats_mmr_rnotebook.Rmd
+++ b/stats_mmr_rnotebook.Rmd
@@ -12,6 +12,8 @@ library(corrplot)
 library(mice)
 library(car)
 library("MVA")
+
+options(scipen=999)
 ```
 
 Combining two sets of data
@@ -31,8 +33,7 @@ data$region <- countrycode(sourcevar = countries,
 
 Remove rows that have more than 50% missing data.
 ```{r}
-complete_rows_df <- data[rowSums(is.na(data)) < ncol(data)/2, ]
-final_df = subset(complete_rows_df, select = -c(Country.Name, Time.Code, Country.Code, Time) )
+final_df <- data[rowSums(is.na(data)) < ncol(data)/2, ]
 final_df
 ```
 
@@ -48,15 +49,15 @@ data_after_mice <- complete(tempData,1)
 
 
 ```{r}
-categorical <- subset(data_after_mice, select = c(region))
-non_categorical <- subset(data_after_mice, select = -c(region))
+categorical <- subset(data_after_mice, select = c(region, Country.Name))
+non_categorical <- subset(data_after_mice, select = -c(region, Country.Name))
 res <- cor(non_categorical)
 corrplot(res, type = "upper", order = "hclust", 
          tl.col = "black", tl.srt = 45)
 ```
 Remove variables that present multicollinearity
 ```{r}
-no_controls = subset(data_after_mice, select = -c(region))
+no_controls = subset(data_after_mice, select = -c(region, Country.Name))
 
 vif_fun <- function(df, keep_in) {
              # df: the dataset of interest
@@ -86,73 +87,82 @@ vif_fun(no_controls,keep_in = c("gdp","fertility_rate","skilled_health_staff","m
 ```
 
 ```{r}
-no_private_health_var <- subset(data_after_mice, select = -c(private_health_exp_per_cap, private_health_exp_percent))
-noncategorical <- subset(no_private_health_var, select = -c(region))
+noncategorical <- subset(data_after_mice, select = -c(region, Country.Name))
 boxplot(noncategorical, use.cols = TRUE, las=2)
 ```
 Remove export_val_ind outliers
 ```{r}
-no_private_health_var$gdp_transform <- log(no_private_health_var$gdp)
-no_private_health_var$fertility_rate_transform <- log(no_private_health_var$fertility_rate)
-no_private_health_var$mmr_transform <- log(no_private_health_var$mmr)
-df_transform <- subset(no_private_health_var, select = -c(fertility_rate, mmr))
+data_after_mice$gdp_transform <- log(data_after_mice$GDP)
+data_after_mice$fertility_rate_transform <- log(data_after_mice$fertility_rate)
+data_after_mice$mmr_transform <- log(data_after_mice$MMR)
+data_after_mice$female_pop_transform <- log(data_after_mice$female_pop)
 ```
 
 ```{r}
-boxplot(subset(df_transform, select = -c(region)), use.cols = TRUE, las=2)
+boxplot(subset(data_after_mice, select = -c(region, GDP, fertility_rate, female_pop, MMR, Country.Name)), use.cols = TRUE, las=2)
 ```
+
 ```{r}
-baseline <- lm(mmr_transform~ gdp_transform + skilled_health_staff + region + fertility_rate_transform, data = df_transform)
+baseline <- lm(mmr_transform ~ region + govt_health_exp + private_health_exp, data = data_after_mice)
 summary(baseline)
 ```
 
 ```{r}
-lm_percent <- lm(mmr_transform~skilled_health_staff + gdp_transform + fertility_rate_transform + region + govt_health_exp_percent + oop_health_exp_percent, data = df_transform)
-summary(lm_percent)
+baseline_contr_1 <- lm(mmr_transform ~ region + govt_health_exp + private_health_exp + gdp_transform + fertility_rate_transform + SAB, data = data_after_mice)
+summary(baseline_contr_1)
 ```
 
 ```{r}
-par(mfrow = c(2, 2))
-plot(lm)
+baseline_contr_2 <- lm(mmr_transform ~ region + govt_health_exp + private_health_exp + gdp_transform + fertility_rate_transform + SAB + female_pop_transform + num_physicians, data = data_after_mice)
+summary(baseline_contr_2)
 ```
 ```{r}
-lm_per_cap <- lm(mmr_transform~skilled_health_staff + gdp_transform + fertility_rate_transform + region + govt_health_exp_per_cap + oop_per_cap, data = df_transform)
-summary(lm_per_cap)
-```
-
-```{r}
-anova(baseline, lm_percent)
+df_health_exp_decile <- data_after_mice
+df_health_exp_decile$govt_exp_decile <- ntile(data_after_mice$govt_health_exp, 10)
+df_health_exp_decile
 ```
 ```{r}
-anova(baseline, lm_per_cap)
-```
-
-```{r}
-df_with_deciles <- df_transform
-df_with_deciles$gdp_decile <- ntile(df_transform$gdp, 10)
-df_with_deciles
+df_gdp_decile <- df_health_exp_decile
+df_gdp_decile$gdp_decile <- ntile(df_health_exp_decile$GDP, 10)
+df_gdp_decile
 ```
 
 ```{r}
-lm_percent_decile <- lm(mmr_transform~skilled_health_staff + gdp_decile + fertility_rate_transform + region + govt_health_exp_percent + oop_health_exp_percent, data = df_with_deciles)
-summary(lm_percent_decile)
+df_by_group <- aggregate(govt_exp_decile ~ region + gdp_decile, data=df_gdp_decile, FUN=mean)
+df_by_group
+```
+```{r}
+names(df_by_group)[3] <- "govt_exp_by_group"
 ```
 
 ```{r}
-lm_per_cap_decile <- lm(mmr_transform~skilled_health_staff + gdp_decile + fertility_rate_transform + region + govt_health_exp_per_cap + oop_per_cap, data = df_with_deciles)
-summary(lm_per_cap_decile)
+final_df <- merge(df_by_group,df_gdp_decile, by=c("region","gdp_decile"))
+final_df$govt_exp_by_group <- log(final_df$govt_exp_by_group)
 ```
 
 ```{r}
-df_with_ratio <- df_with_deciles
-df_with_ratio$health_exp_ratio <- df_with_ratio$govt_health_exp_percent/df_with_ratio$oop_health_exp_percent
+final_df
 ```
 
 
 ```{r}
-df_with_ratio
+p <- ggplot(final_df, aes(x=govt_exp_by_group, y=mmr_transform)) + 
+  geom_point(aes(colour=region)) +
+  geom_smooth(method=lm, se=F, colour="black")
+
+p + scale_color_brewer(palette = "Paired") + xlab("Log of mean Government Health Expenditure by region and GDP decile") + ylab("Log of MMR")
 ```
+
 ```{r}
-lm_ratio <- lm(mmr_transform~skilled_health_staff + gdp_decile + fertility_rate_transform + region + health_exp_ratio, data = df_with_ratio)
-summary(lm_ratio)
+groups_with_controls <- lm(mmr_transform ~ govt_exp_by_group + fertility_rate_transform + SAB + female_pop_transform + num_physicians, data = final_df)
+summary(groups_with_controls)
+```
+
+```{r}
+europe_df <- subset(final_df, region %in% c("Europe & Central Asia"))
+```
+
+```{r}
+europe_reg <- lm(mmr_transform ~ govt_exp_by_group + fertility_rate_transform + SAB + female_pop_transform + num_physicians, data = europe_df)
+summary(europe_reg)
 ```
